# code-for-blog

./: .clang-format  .gitignore  .vimrc  README.md  README.rst
.github/: dependabot.yml
2005/perl_serial_comm/: README.txt  Serial.cpp  Serial.h  SerialComm.pm  csocket.cpp  example.pl
2005/perlmix/: LICENSE  README.txt  hello.mixal  hello.pl  test.pl
2006/: lis_algorithms.rb
2007/sicp/: common.lisp  evaluator.lisp  evaluator_testing.lisp
2007/sudoku_sat/: eliben_utils.rb  readme.txt  sat_solver.rb  sudoku_solver.rb  test_sat_solver.rb  test_sudoku_solver.rb
2008/: google_api_search.py  google_web_search.py  libcollect.py  list_rotation.py  wx_mpl_bars.py  wx_mpl_dynamic_graph.py
2008/memmgr/: README.txt  main.c  memmgr.c  memmgr.h
2008/wxpytris/: wxpytris.py  wxpytris_highscores
2009/: qt_mpl_bars.py
2009/csp_for_euler68/: csp_sample_problems.py  csplib.py  euler0068.py
2009/eblib/: lexer.py  libcollect.py  namedtuple.py  serialutils.py  tracer.py  utils.py
2009/modexp/: modexp.py
2009/plotting_data_monitor/: _distrib.py  com_monitor.py  livedatafeed.py  plotting_data_monitor.pyw  sender_sim.py
2009/protocol/: protocolwrapper.py  sampleformat.py  (+1 more)
2011/: dwarf_get_func_addr.c  simple_tracer.c  simple_tracer_64.c
2012/: rd_infix_precedence.py  templatelexer.py
2013/: js-inheritance-es5.js  js-inheritance-es6.js  twisted_irc_server.py  twisted_irc_testbot.py
2014/: variadic-tuple.cpp
2015/: traversals.py
2025/plugin-mdbook/preprocessor-rust-narcissist/: Cargo.toml
2025/plugin-mdbook/preprocessor-rust-narcissist/src/: main.rs
(+1175 files in other folders)
